[INT-45] portal and userInPortal
